<resources>
    <string name="app_name">Myd</string>
    <!--Login Activity -->
    <string name="introText">אפליקציה לניהול ושיווק מוצר</string>
    <string name="introLine2">Product management and marketing application</string>
    <string name="introLine3">היכנס או צור את החשבון החדש שלך</string>
    <string name="intro_hint_email">דואר אלקטרוני</string>
    <string name="intro_hint_password">סיסמא (לפחות 6 תווים)</string>
    <string name="login_button">כניסה</string>
    <string name="link_forgot_password">שכחת את הסיסמא? לחץ כאן</string>
    <string name="intro_register">אין לך חשבון? הירשם עכשיו</string>
    <string name="register_button">הרשמה</string>
    <string name="validation_mail">חובה להכניס דואר אלקטרוני</string>
    <string name="validation_password">חובה להכניס סיסמא</string>
    <string name="error_password_short">הסיסמא קצרה מדי (מינימום 6 תווים)</string>
    <string name="auth_failed">האימות נכשל! בדוק את נכונות האימייל והסיסמא, או האם הינך משתמש רשום</string>
    <string name="connection_failed">בדוק את החיבור לאינטרנט</string>
    <string name="messege_title">\u0020\u0020ברוכים הבאים</string>
    <string name="messege_success">\u0020\u0020הכניסה בוצעה בהצלחה</string>

    <!--General-->
    <string name="delete_title">מחק פריט</string>
    <string name="delete_message">האם את/ה בטוח/ה שברצונך למחוק פריט זה?</string>
    <string name="cancel_label">ביטול</string>
    <string name="save_label">שמירה</string>

    <!--Registration Activity-->
    <string name="reg_text">רישום משתמש חדש</string>
    <string name="create_account">צור חשבון</string>
    <string name="confirm_hint_password">וודא סיסמא</string>
    <string name="cancel_reg">ביטול</string>
    <string name="lbl_forgot_password">שכחת את הסיסמא?</string>
    <string name="forgot_password_msg">אנא הכנס את הדואר האלקטרוני לשם איפוס הסיסמא</string>
    <string name="btn_reset_password">אפס סיסמא</string>
    <string name="error_confirm_password">סיסמא לא תואמת לוודא סיסמא</string>
    <string name="success_createUserWithEmail">נרשמת בהצלחה!</string>
    <string name="authentication_failed">האימות נכשל</string>

    <!--Reset Password Activity-->
    <string name="enter_registered_email_id">הכנס כתובת דואר אלקטרוני רשום</string>
    <string name="send_instructions">נשלח לדואר האלקטרוני הוראות לאיפוס הסיסמא</string>
    <string name="send_failed">איפוס סיסמא נכשל</string>

    <!--Menu Activity-->
    <string name="menu_text">תפריט</string>
    <string name="action_setting">הגדרות</string>
    <string name="action_about">אודות</string>
    <string name="action_logoff">יציאה</string>
    <string name="btn_back"><![CDATA[ חזור]]></string>
    <string name="messege_titleExit">\u0020\u0020התנתקות</string>
    <string name="messege_body">\u0020\u0020להתנתקות- לחץ על אישור</string>
    <string name="messege_confirm">אישור</string>

    <!--Setting Activity-->
    <string name="new_setting_title">הגדרות</string>
    <string name="change_email">שינוי דואר אלקטרוני</string>
    <string name="change_password">שינוי סיסמא</string>
    <string name="send_password_reset_email">שלח בדואר אלקטרוני איפוס סיסמא</string>
    <string name="remove_user">מחק חשבון זה</string>
    <string name="btn_sign_out">יציאה מהחשבון</string>
    <string name="btn_change">שנה</string>
    <string name="hint_new_email">דואר אלקטרוני</string>
    <string name="new_pass">סיסמא חדשה</string>
    <string name="email">דואר אלקטרוני</string>
    <string name="btn_send">שלח</string>
    <string name="hint_email">דואר אלקטרוני</string>


    <!--I put-->
    <string name="action_sign_in_short">Register</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_remove">Remove</string>

    <!--About Activity-->
    <string name="about_title">אודות | אפליקציה לניהול ושיווק מוצר</string>
    <string name="about_text">אפליקציה זו מיועדת עבור אנשים אשר פיתחו מוצר
        וזקוקים לכלי עזר כדי לנהל את ייצורו בכמויות מסחריות.
        באפליקציה זו ניתן לנווט בין מספר אפשרויות ממסך התפריט:\n
        <b>ספקים -\n</b>
        ניהול רשימת הספקים מולם יש לעבוד\n
        <b>עלויות -\n</b>
        ניהול רשימת עלות כל חלק ממנו בנוי המוצר\n
        <b>הזמנות -\n</b>
        ניהול רשימת ההזמנות ומעקב אחר הגעתן\n
        <b>חנויות משווקות -\n</b>
        ניהול רשימת החנויות בהן משווק המוצר\n
        <b>טיפולים -\n</b>
        ניהול ומעקב אחר משימות שיש לבצע\n
<b>ברקוד/מצב מלאי -\n</b>
        ניהול רשימת מספרי ברקוד המוקצים למוצר\n
                 מעקב אחר כמות המלאי הזמינה של המוצר\n
        <b>מחירון -\n</b>
        ניהול מחיר מחירון לצרכן ובדיקת עלות-רווח\n
        <b>בדיקת רווח -\n</b>
                חישוב רווח של עלות מול ייצור\n
    </string>

    <!--Suppliers Activity-->
    <string name="supplier_title">ספקים</string>
    <string name="search_supplier">חיפוש ספק</string>
    <string name="new_supplier_title">ספק חדש</string>
    <string name="sup_name">*שם ספק</string>
    <string name="sup_role">חברה/תפקיד</string>
    <string name="sup_address">שם רחוב, עיר</string>
    <string-array name="typeAddress">
        <item>בית</item>
        <item>עבודה</item>
        <item>אחר</item>
    </string-array>
    <string name="sup_email">דואר אלקטרוני</string>
    <string-array name="typeEmail">
        <item>אישי</item>
        <item>עבודה</item>
        <item>ארגון</item>
        <item>עיקרי</item>
        <item>משני</item>
        <item>אחר</item>
    </string-array>
    <string name="sup_phone">*מספר טלפון</string>
    <string-array name="typePhoneNumber">
        <item>נייד</item>
        <item>עבודה</item>
        <item>בית</item>
        <item>פקס עבודה</item>
        <item>פקס ביתי</item>
        <item>אחר</item>
    </string-array>
    <string name="sup_comments">הערות</string>
    <string name="select_option">מה ברצונך לעשות?</string>
    <string name="title_call">חיוג לספק</string>
    <string name="msg_call">האם ברצונך להתקשר לספק זה?</string>


    <!--Costs Activity-->
    <string name="costs_title">עלויות</string>

    <string name="new_costs_title">הוספת עלות</string>
    <string name="search_cost">חיפוש עלות</string>
    <string name="information">information</string>
    <string name="description_cost">תיאור</string>
    <string name="costs_price_unit">מחיר עלות יחידה</string>
    <string name="type_coin">סוג מטבע</string>
    <string-array name="typeCoinSpinner">
        <item>₪</item>
        <item>$</item>
        <item>€</item>
        <item> </item>
    </string-array>
    <string name="quantity_unit">כמות יחידות</string>
    <string name="plus_counter">+</string>
    <string name="minus_counter">-</string>
    <string name="init_zero_value">0</string>

    <!--Orders Activity-->
    <string name="orders_title">הזמנות</string>
    <string name="search_order">חפש הזמנה</string>
    <string name="order_quan">0</string>

    <string name="new_order_title">הוספת הזמנה</string>
    <string name="description_order">תיאור הזמנה</string>
    <string name="order_date">תאריך הכנה</string>
    <string name="Set_reminder">קבע תזכורת</string>

    <!--Shops Activity-->
    <string name="shops_title">חנויות</string>

    <string name="new_shop_title">הוספת חנות</string>
    <string name="search_shop">חפש חנות</string>
    <string name="shop_name">שם החנות</string>
    <string name="shop_address">כתובת החנות</string>
    <string name="shop_contact_man">איש קשר</string>
    <string name="shop_phone_number">מספר טלפון</string>
    <string name="shop_email">דואר אלקטרוני</string>
    <string name="quantity_sold_shop">נמכרו</string>
    <string name="shop_share">שתף</string>
    <string name="dail_number">חייג למספר</string>

    <!--To-Do Activity-->
    <string name="to_do_title">טיפולים</string>
    <string name="search_task">חפש משימה</string>
    <string name="new_task_title">הוספת משימה</string>
    <string name="to_do_task">מה ברצונך לעשות?</string>
    <string name="todo_proirity">בחר עדיפות:</string>
    <string name="to_do_high">1-גבוה</string>
    <string name="to_do_medium">2-בינוני</string>
    <string name="to_do_low">3-נמוך</string>
    <string name="to_do_finish">טופל</string>

    <string name="todo_done">Done</string>

    <!--Barcode Activity-->
    <string name="barcode_title">ברקוד</string>
    <string name="search_barcode">חפש ברקוד</string>
    <string name="new_barcode_title">הקצאת מספר ברקוד</string>
    <string name="barcode_number">סרוק או ערוך מספר ברקוד</string>
    <string name="bracode_product_name">שם המוצר</string>
    <string name="barcode_country">מדינה</string>
    <string name="barcode_num">מספר ברקוד</string>
    <string name="barcode_invite">להזמין</string>
    <string name="barcode_status">כמות זמינה</string>
    <string name="barcode_check">כמות מצב מלאי</string>
    <string name="limit_value">לא ניתן להכניס מספר גבוה יותר</string>
    <string name="quantity_empty_exception"> חובה להזין כמות חוקית</string>
    <string name="minimum_value">הכמות חייבת להיות למעלה מאפס!</string>

    <!--Price Activity-->
    <string name="price_title">מחירון</string>
    <string name="search_price">חפש מחירון</string>
    <string name="add_price_title">עריכת מחירון</string>
    <string name="price_product_name">שם המוצר</string>
    <string name="price_for_unit">מחיר ליחידה</string>
    <string name="price_type_coin">סוג מטבע</string>
    <string-array name="priceTypeCoinSpinner">
        <item>₪</item>
        <item>$</item>
        <item>€</item>
        <item> </item>
    </string-array>
    <string name="min_quantity_unit">כמות מינימלית</string>
    <string name="price_comments">הערות</string>

    <string name="add_price_check_title">בדיקת רווח</string>
    <string name="price_total_cost_product">עלות כוללת לייצור יחידה</string>
    <string name="price_for_unit_customer">מחיר ליחידה לצרכן</string>
    <string name="sold_quantity_unit">כמות רכישה</string>
    <string name="return_btn">חזור</string>
    <string name="check_btn">בדוק</string>
    <string name="genre">זאנר</string>


</resources>
