<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_shop"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context="com.example.user.myd.AddShop">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_centerHorizontal="true"
        android:background="@color/colorGray"
        android:orientation="vertical"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/textShop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="19dp"
        android:padding="15dp"
        android:text="@string/new_shop_title"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="28sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textShop"
        android:orientation="vertical"
        android:weightSum="1">


        <EditText
            android:id="@+id/add_shop_name"
            android:layout_width="285dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.10"
            android:drawablePadding="10dp"
            android:drawableRight="@drawable/store"
            android:ems="10"
            android:hint="@string/shop_name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/et_shop_contact"
            android:layout_width="285dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.10"
            android:drawablePadding="10dp"
            android:drawableRight="@drawable/contact_man"
            android:ems="10"
            android:hint="@string/shop_contact_man"
            android:inputType="text"
            android:maxLines="1" />

        <EditText
            android:id="@+id/et_shop_address"
            android:layout_width="285dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.10"
            android:drawablePadding="10dp"
            android:drawableRight="@drawable/address"
            android:ems="10"
            android:hint="@string/shop_address"
            android:inputType="text"
            android:maxLines="1" />

        <EditText
            android:id="@+id/et_shop_email"
            android:layout_width="285dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawablePadding="10dp"
            android:drawableRight="@drawable/shop_mail"
            android:ems="10"
            android:hint="@string/shop_email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/et_shop_phone_number"
            android:layout_width="285dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawablePadding="10dp"
            android:drawableRight="@drawable/phone"
            android:ems="10"
            android:hint="@string/shop_phone_number"
            android:inputType="phone" />

        <TextView
            android:id="@+id/quantitySoldShop"
            android:layout_width="98dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_weight="0.08"
            android:ems="10"
            android:text="@string/quantity_sold_shop"
            android:textSize="16sp" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_plus"
                android:layout_width="@dimen/circle_size"
                android:layout_height="@dimen/circle_size"
                android:background="@drawable/button_plus_minus"
                android:text="@string/plus_counter" />


            <EditText
                android:id="@+id/soldQuantity"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/init_zero_value"
                android:inputType="number"></EditText>

            <Button
                android:id="@+id/button_minus"
                android:layout_width="@dimen/circle_size"
                android:layout_height="@dimen/circle_size"
                android:background="@drawable/button_plus_minus"
                android:text="@string/minus_counter" />

        </LinearLayout>

    </LinearLayout>

    <ImageButton
        android:id="@+id/home_btn"
        android:layout_width="@dimen/inf_icon"
        android:layout_height="@dimen/inf_icon"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:background="@color/colorGray"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/infor" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="500dp">

        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/height_btn"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="29dp"
            android:layout_marginRight="29dp"
            android:background="@drawable/buttonshape"
            android:backgroundTint="@color/colorRed"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:text="@string/cancel_label"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/save_btn"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/height_btn"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="33dp"
            android:layout_marginStart="33dp"
            android:background="@drawable/buttonshape"
            android:backgroundTint="@color/colorGreen"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:text="@string/save_label"
            android:textColor="#FFFFFF" />
    </RelativeLayout>

</RelativeLayout>
