<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#505C76"
    tools:context="com.moran.myd.LoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="28dp"
            android:layout_weight="0.32"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="logo"
                app:srcCompat="@drawable/logo_myd" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="199dp"
            android:layout_weight="0.55"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.07"
                android:text="@string/introText"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:text="@string/introLine2"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/introLine3"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:textStyle="italic" />


            <EditText
                android:id="@+id/email"
                android:layout_width="285dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:background="#FFFFFF"
                android:drawablePadding="5dp"
                android:drawableRight="@drawable/mail"
                android:hint="@string/intro_hint_email"
                android:inputType="textEmailAddress"
                android:padding="0dp"
                android:textColor="#000000"
                android:textColorHint="#717171"
                android:textDirection="rtl" />

            <EditText
                android:id="@+id/password"
                android:layout_width="285dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:background="#FFFFFF"
                android:drawablePadding="5dp"
                android:drawableRight="@drawable/password"
                android:hint="@string/intro_hint_password"
                android:inputType="textPassword"
                android:padding="0dp"
                android:textColor="#000000"
                android:textColorHint="#717171" />

            <Button
                android:id="@+id/enter_btn"
                android:layout_width="285dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:background="@drawable/buttonshape"
                android:text="@string/login_button"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="13dp"
                android:text="@string/link_forgot_password"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="או"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/intro_register"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:textStyle="italic" />

        <Button
            android:id="@+id/register_btn"
            android:layout_width="285dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@drawable/buttonshape"
            android:text="@string/register_button"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />
    </LinearLayout>
</RelativeLayout>