<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_registration"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#505C76"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.moran.myd.Registration">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.23"
            android:padding="40dp"
            android:text="@string/reg_text"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="30sp" />


        <EditText
            android:id="@+id/reg_email"
            android:layout_width="285dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:background="#FFFFFF"
            android:drawablePadding="5dp"
            android:drawableRight="@drawable/mail"
            android:hint="@string/intro_hint_email"
            android:inputType="textEmailAddress"
            android:padding="0dp"
            android:textColor="#000000"
            android:textColorHint="#717171"
            android:textDirection="rtl" />

        <EditText
            android:id="@+id/reg_password"
            android:layout_width="285dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:background="#FFFFFF"
            android:drawablePadding="5dp"
            android:drawableRight="@drawable/password"
            android:hint="@string/intro_hint_password"
            android:inputType="textPassword"
            android:padding="0dp"
            android:textColor="#000000"
            android:textColorHint="#717171" />

        <EditText
            android:id="@+id/confirm_password"
            android:layout_width="285dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="40dp"
            android:background="#FFFFFF"
            android:drawablePadding="5dp"
            android:drawableRight="@drawable/password"
            android:hint="@string/confirm_hint_password"
            android:inputType="textPassword"
            android:padding="0dp"
            android:textColor="#000000"
            android:textColorHint="#717171" />

        <Button
            android:id="@+id/reg_btn"
            android:layout_width="285dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:background="@drawable/buttonshape"
            android:backgroundTint="#5FC4BC"
            android:text="@string/create_account"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="285dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@drawable/buttonshape"
            android:backgroundTint="#FFFFFF"
            android:text="@string/cancel_reg"
            android:textColor="#000000"
            android:textSize="16sp" />


    </LinearLayout>
</RelativeLayout>
